human-intervention-logs/org.apache.logging.log4j:log4j-to-slf4j:2.17.1/gradle-test/gradle-test-2026-05-10T08-10-11-951538Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.logging.log4j:log4j-to-slf4j:2.17.1
Command: `/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 2 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/src/test/java/org_apache_logging_log4j/log4j_to_slf4j/Log4j_to_slf4jTest.java:70: error: reference to assertThat is ambiguous
        assertThat(factoryLogger.getMessageFactory()).isSameAs(ParameterizedMessageFactory.INSTANCE);
        ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/src/test/java/org_apache_logging_log4j/log4j_to_slf4j/Log4j_to_slf4jTest.java:88: error: reference to isEnabled is ambiguous
        assertThat(logger.isEnabled(Level.DEBUG, null, new SimpleMessage("message"), null)).isTrue();
                         ^
  both method isEnabled(Level,Marker,Message,Throwable) in SLF4JLogger and method isEnabled(Level,Marker,CharSequence,Throwable) in SLF4JLogger match
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/src/test/java/org_apache_logging_log4j/log4j_to_slf4j/Log4j_to_slf4jTest.java:188: error: reference to assertThat is ambiguous
        assertThat(readOnlyContextData.getValue("alpha")).isEqualTo("one");
        ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/src/test/java/org_apache_logging_log4j/log4j_to_slf4j/Log4j_to_slf4jTest.java:189: error: reference to assertThat is ambiguous
        assertThat(readOnlyContextData.getValue("beta")).isEqualTo("two");
        ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
4 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/src/test/java/org_apache_logging_log4j/log4j_to_slf4j/Log4j_to_slf4jTest.java:70: error: reference to assertThat is ambiguous
          assertThat(factoryLogger.getMessageFactory()).isSameAs(ParameterizedMessageFactory.INSTANCE);
          ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/src/test/java/org_apache_logging_log4j/log4j_to_slf4j/Log4j_to_slf4jTest.java:88: error: reference to isEnabled is ambiguous
          assertThat(logger.isEnabled(Level.DEBUG, null, new SimpleMessage("message"), null)).isTrue();
                           ^
    both method isEnabled(Level,Marker,Message,Throwable) in SLF4JLogger and method isEnabled(Level,Marker,CharSequence,Throwable) in SLF4JLogger match
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/src/test/java/org_apache_logging_log4j/log4j_to_slf4j/Log4j_to_slf4jTest.java:188: error: reference to assertThat is ambiguous
          assertThat(readOnlyContextData.getValue("alpha")).isEqualTo("one");
          ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/tests/src/org.apache.logging.log4j/log4j-to-slf4j/2.17.1/src/test/java/org_apache_logging_log4j/log4j_to_slf4j/Log4j_to_slf4jTest.java:189: error: reference to assertThat is ambiguous
          assertThat(readOnlyContextData.getValue("beta")).isEqualTo("two");
          ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2265-6fe5d7db/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.logging.log4j:log4j-to-slf4j:2.17.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
